<resources>
    <string name="app_name">safeguard</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="safe_guard">Safe Guard</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here_register">New Here? Register</string>
    <string name="image_facebook">image facebook</string>
    <string name="image_google">image google</string>
    <string name="image_apple">image apple</string>
    <string name="image_location">image location</string>
    <string name="register">Register</string>
    <string name="already_member_login">Already member? Login</string>
    <string name="descriptions_required">Your password must be at least 6 characters long and include numbers, letters, and special characters (!$@%).</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="notification">Notification</string>
    <string name="map_placeholder">Map Placeholder</string>
    <string name="greeting_message">Hi, %1$s</string>
    <string name="email_sent_message">We have sent the email to %1$s</string>
    <string name="greeting">Hi, User</string>
    <string name="locate_me">Locate Me</string>
    <string name="call">Call</string>
    <string name="map">Map</string>
    <string name="chat">Chat</string>
    <string name="home">Home</string>
    <string name="zoom_in">zoom in</string>
    <string name="zoom_out">zoom out</string>
    <string name="support_protection_hotline"><![CDATA[Support & Protection Hotline]]></string>
    <string name="police_icon">Police Icon</string>
    <string name="police">POLICE</string>
    <string name="call_police">Call Police</string>
    <string name="camera_for_police">Camera for Police</string>
    <string name="camera_for_hospital">Camera for Hospital</string>
    <string name="hospital_icon">Hospital Icon</string>
    <string name="call_hospital">Call Hospital</string>
    <string name="hospital">HOSPITAL</string>
    <string name="share_location">Share my location</string>
    <string name="otp_verification_code">OTP Verification Code</string>
    <string name="notify_sent_mail">We have sent the to thuyanov@gmail.com</string>
    <string name="confirm">Confirm</string>
    <string name="resend_code">Didn\'t receive a code? Resend code</string>
    <string name="firefighting">FIREFIGHTING</string>
    <string name="sos_dn">SOS ĐÀ NẴNG</string>
    <string name="call_firefighting">Call firefighting</string>
    <string name="camera_for_firefighting">Camera for firefighting</string>
    <string name="call_sos_dn">Call sos Da Nang</string>
    <string name="camera_for_sos_dn">Camera for sos dn</string>
</resources>
